[metadata]
description-file = README.rst

[aliases]
test = pytest

[flake8]
exclude = __init__.py,*externals*,constants.py,fixes.py
ignore = W504,I100,I101,I201,N806

[tool:pytest]
addopts =
    --durations=20 --doctest-modules -ra --cov-report= --tb=short
    --doctest-ignore-import-errors --junit-xml=junit-results.xml
    --ignore=doc --ignore=examples --ignore=tools
    --color=yes --capture=sys
junit_family = xunit2
